--- a/index.html
+++ b/index.html
@@ -13,8 +13,37 @@
 <body>
     <header>
         <h1>My Logo</h1>
-        <img src="Images/menu-button.png" alt="">
-        
+        <img src="Images/menu-button.png" alt="">  
     </header>
+
+    <div class ="container">
+        <img class="image-1" src="Images/Ellipse 11.png" alt="">
+        <img class="image-2" src="Images/Ellipse 5.png" alt="">
+        <img class="image-3" src="Images/Rectangle 7.png" alt="">
+        <img class="image-4" src="Images/Rectangle 4.png" alt="">
+        <img class="image-5" src="Images/Ellipse 3.png" alt="">
+    </div>
+    <h3>
+        I'm Joseph</h3>
+
+        <br><h3>Glad to meet </h3>
+
+        <br><h3>you!</h3>
+    </h3>
+
+    <p>
+        I’m a software developer! I can help you build a product , 
+        feature or website Look through some of my work and experience! 
+        If you like what you see and have a project you need coded, 
+        don’t hestiate to contact me.
+    </p>
+    <h4>LET’S CONNECT</h4>
+    <div class="social"> 
+        <img src="Images/twitter.svg" alt="">
+        <img src="Images/Linkedin icon.svg" alt="">
+        <img src="Images/m vector.svg" alt="">
+        <img src="Images/github.svg" alt="">
+        <img src="Images/Vector.svg" alt="">
+    </div>
 </body>
 </html>
