--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <img src="Images/menu-button.png" alt="">  
     </header>
 
-    <div class ="container">
+    <div >
         <img class="image-1" src="Images/Ellipse 11.png" alt="">
         <img class="image-2" src="Images/Ellipse 5.png" alt="">
         <img class="image-3" src="Images/Rectangle 7.png" alt="">
         <img class="image-4" src="Images/Rectangle 4.png" alt="">
         <img class="image-5" src="Images/Ellipse 3.png" alt="">
     </div>
-    <h3>
-        I'm Joseph</h3>
 
-        <br><h3>Glad to meet </h3>
-
-        <br><h3>you!</h3>
+    <h3>I'm Joseph</h3>
+     <br>
+    <h3>Glad to meet </h3>
+    <br>
+    <h3>you!</h3>
     </h3>
 
     <p>
@@ -37,13 +37,31 @@
         If you like what you see and have a project you need coded, 
         don’t hestiate to contact me.
     </p>
-    <h4>LET’S CONNECT</h4>
+
+    <div class="container">
+        <h4>LET’S CONNECT</h4>
+        <div>
+            <img class="image-6" src="Images/Ellipse 12.png" alt="">
+            <img class="image-7" src="Images/Ellipse 13.png" alt="">
+        </div>
+    </div>
+    
+
     <div class="social"> 
         <img src="Images/twitter.svg" alt="">
         <img src="Images/Linkedin icon.svg" alt="">
         <img src="Images/m vector.svg" alt="">
         <img src="Images/github.svg" alt="">
         <img src="Images/Vector.svg" alt="">
+    </div>
+
+    <div>
+        <img class="image-10" src="Images/Ellipse 15.png" alt="">
+    </div>
+
+    <div>
+        <img class="image-8" src="Images/Rectangle 5.png" alt="">
+        <img class="image-9" src="Images/Ellipse 4.png" alt="">
     </div>
 </body>
 </html>
