--- a/index.html
+++ b/index.html
@@ -6,62 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <title>mobileFirst</title>
 </head>
 <body>
-    <header>
-        <h1>My Logo</h1>
+    <nav>
+        <header>My Logo</header>
         <img src="Images/menu-button.png" alt="">  
-    </header>
-
-    <div >
-        <img class="image-1" src="Images/Ellipse 11.png" alt="">
-        <img class="image-2" src="Images/Ellipse 5.png" alt="">
-        <img class="image-3" src="Images/Rectangle 7.png" alt="">
-        <img class="image-4" src="Images/Rectangle 4.png" alt="">
-        <img class="image-5" src="Images/Ellipse 3.png" alt="">
-    </div>
-
-    <h3>I'm Joseph</h3>
-     <br>
-    <h3>Glad to meet </h3>
-    <br>
-    <h3>you!</h3>
-    </h3>
-
-    <p>
-        I’m a software developer! I can help you build a product , 
-        feature or website Look through some of my work and experience! 
-        If you like what you see and have a project you need coded, 
-        don’t hestiate to contact me.
-    </p>
-
-    <div class="container">
-        <h4>LET’S CONNECT</h4>
-        <div>
-            <img class="image-6" src="Images/Ellipse 12.png" alt="">
-            <img class="image-7" src="Images/Ellipse 13.png" alt="">
+    </nav>
+    <main>
+            <h1>I'm Joseph Glad to meet you!</h1>  
+        <p>
+            I’m a software developer! I can help you build a product , 
+            feature or website Look through some of my work and experience! 
+            If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.
+        </p>
+            <p class="contain">LET’S CONNECT</p>
+        
+        <div class="social"> 
+            <img src="Images/twitter.svg" alt="">
+            <img src="Images/Linkedin icon.svg" alt="">
+            <img src="Images/m vector.svg" alt="">
+            <img src="Images/github.svg" alt="">
+            <img src="Images/Vector.svg" alt="">
         </div>
-    </div>
+    </main>
+
+
     
-
-    <div class="social"> 
-        <img src="Images/twitter.svg" alt="">
-        <img src="Images/Linkedin icon.svg" alt="">
-        <img src="Images/m vector.svg" alt="">
-        <img src="Images/github.svg" alt="">
-        <img src="Images/Vector.svg" alt="">
-    </div>
-
-    <div>
-        <img class="image-10" src="Images/Ellipse 15.png" alt="">
-    </div>
-
-    <div>
-        <img class="image-8" src="Images/Rectangle 5.png" alt="">
-        <img class="image-9" src="Images/Ellipse 4.png" alt="">
-    </div>
 </body>
 </html>
