layout for page two of the project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
             <img src="Images/Vector.svg" alt="">
         </div>
     </main>
+    <section>
+        <img src="Images/Snapshoot Portfolio.png" alt="">
+        <h2>Tonic</h2>
+        <div>
+            <p>CANOPY</p>
+            <div>
+                <img src="" alt="">
+                <p>Backend Dev</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>2015</p>
+            </div>
+        </div>
+        <p>
+            A daily selection of privately personalized reads; 
+            no accounts or sign-ups required.
+        </p>
+         <div>
+            <a href="">Html</a>
+            <a href="">Css</a>
+            <a href="">Javascript</a>
+         </div>
+
+         <button>See Project</button>
+        
+    </section>
 
 
     
