Snap shoot section added in second page

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <img src="Images/Vector.svg" alt="">
         </div>
     </main>
-    <section>
-        <img src="Images/Snapshoot Portfolio.png" alt="">
+    <section id="secondPage">
+        <img class="snap" src="Images/Snapshoot Portfolio.png" alt="">
         <h2>Tonic</h2>
         <div>
             <p>CANOPY</p>
