style the main section of the second page in the project

--- a/index.html
+++ b/index.html
@@ -39,23 +39,29 @@
     </main>
     <section id="secondPage">
         <img class="snap" src="Images/Snapshoot Portfolio.png" alt="">
-        <h2>Tonic</h2>
-        <div>
-            <p>CANOPY</p>
-            <div>
-                <img src="" alt="">
+        <h2 class="tonic">Tonic</h2>
+        <div class="container">
+            <div class="canopy">
+                <p>CANOPY</p>
+            </div>
+            
+            <div class="details">
+                <img src="Images/Counter.png" alt="">
                 <p>Backend Dev</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="details">
+                <img src="Images/Counter.png" alt="">
                 <p>2015</p>
             </div>
         </div>
-        <p>
-            A daily selection of privately personalized reads; 
-            no accounts or sign-ups required.
-        </p>
-         <div>
+        <div class="content">
+            <p>
+                A daily selection of privately personalized reads; 
+                no accounts or sign-ups required.
+            </p>
+        </div>
+        
+         <div class="link">
             <a href="">Html</a>
             <a href="">Css</a>
             <a href="">Javascript</a>
