Finalised styling on the second page of the project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>mobileFirst</title>
 </head>
 <body>
@@ -63,11 +64,11 @@
         
          <div class="link">
             <a href="">Html</a>
-            <a href="">Css</a>
-            <a href="">Javascript</a>
+            <a href="">css</a>
+            <a href="">javascript</a>
          </div>
 
-         <button>See Project</button>
+         <button class="button"><a href="">See Project</a></button>
         
     </section>
 
