Design for the Skills page

--- a/index.html
+++ b/index.html
@@ -194,9 +194,27 @@
 
     <button class="about-button"><a href="">Get my resume</a></button>
 </section>
-    
 
+<div class="lang">
+    <h3>Languages</h3>
+    <img src="Images/arrow-down-sign-to-navigate.png" alt="">
+</div>
 
-    
+<ul class=" basic"> 
+    <li><img src="Images/Ellipse 1.png" alt=""> <p>Javascript</p> </li>
+    <li><img src="Images/Ellipse 1 (1).png" alt=""> <p>HTML</p> </li>
+    <li><img src="Images/Ellipse 1 (2).png" alt=""> <p>CSS</p></li>
+</ul>
+
+<div class="lang-skills">
+    <h3>Frameworks</h3>
+    <img src="Images/right-arrow.png" alt="">
+</div>
+<hr>
+<div class="lang-skills">
+    <h3>Skills</h3>
+    <img src="Images/right-arrow.png" alt="">
+</div>
+<hr>     
 </body>
 </html>
