Added the contact page in the project

--- a/index.html
+++ b/index.html
@@ -210,11 +210,28 @@
     <h3>Frameworks</h3>
     <img src="Images/right-arrow.png" alt="">
 </div>
-<hr>
+<div><img class="shape" src="Images/Separator Bottom.png" alt=""></div>
 <div class="lang-skills">
     <h3>Skills</h3>
     <img src="Images/right-arrow.png" alt="">
 </div>
-<hr>     
+<div><img class="shape" src="Images/Separator Bottom.png" alt=""></div>
+
+<section class="contact">
+    <!-- <img class="contact-background" src="Images/contact form shapes-mobile@2x.png" alt=""> -->
+    <h2>Contact Me</h2> 
+<p>
+    If you have an application you are interested in developing, 
+    a feature that you need built or a project that needs coding.
+     I’d love to help with it 
+</p>
+   <input placeholder="Yeremias" type="text">
+   <input placeholder="natajayanj14@gmail.com" type="text">
+   <textarea placeholder="Write your message here" name="" id="" cols="30" rows="10"></textarea>
+
+<button  class="contact-button"><a href="">Get in touch</a></button>
+
+<div class=""><img src="Images/Shape.png" alt=""></div>
+</section>
 </body>
 </html>
