Make all requested changes in code review

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
         </div>
         
-        <ul class="link">
+         <ul class="link">
             <li><a href="">Html</a></li>
             <li><a href="">css</a></li>
             <li><a href="">javascript</a></li>
@@ -204,9 +204,9 @@
 </div>
 
 <ul class=" basic"> 
-    <li><img src="Images/Ellipse 1.png" alt=""> <p>Javascript</p> </li>
-    <li><img src="Images/Ellipse 1 (1).png" alt=""> <p>HTML</p> </li>
-    <li><img src="Images/Ellipse 1 (2).png" alt=""> <p>CSS</p></li>
+    <li class="stack"><img src="Images/Ellipse 1.png" alt=""> <p>Javascript</p> </li>
+    <li class="stack"><img src="Images/Ellipse 1 (1).png" alt=""> <p>HTML</p> </li>
+    <li class="stack"><img src="Images/Ellipse 1 (2).png" alt=""> <p>CSS</p></li>
 </ul>
 
     <ul class="lang-skills">
