Adding a type of submit to the button and adding a valid  end point to the form in the contact page

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
     a feature that you need built or a project that needs coding.
      I’d love to help with it 
 </p>
-<form action="https://formspree.io/f/{form_id}" method="post">
+<form action="https://formspree.io/f/xgebkzlz" method="post">
    <input name="Name" placeholder="Yeremias" type="text" maxlength="30" required>
    <input name="Email" placeholder="natajayanj14@gmail.com" type="email" required>
    <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500" type="text" required></textarea>
-<button  class="contact-button"><a href="">Get in touch</a></button>
+<button type="submit" class="contact-button"><a href="">Get in touch</a></button>
 </form>
 <div class=""><img src="Images/Shape.png" alt=""></div>
 </section>
