Create Css folder and add the various css styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -229,7 +229,7 @@
    <input name="Name" placeholder="Yeremias" type="text" maxlength="30" required>
    <input name="Email" placeholder="natajayanj14@gmail.com" type="email" required>
    <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500" type="text" required></textarea>
-<button type="submit" class="contact-button"><a href="">Get in touch</a></button>
+<button type="submit" id="contact-button"><a href="">Get in touch</a></button>
 </form>
 <div class=""><img src="Images/Shape.png" alt=""></div>
 </section>
