--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/card.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -218,7 +221,7 @@
 
 </section>
 <!-- This is the contact page -->
-<section class="contact">
+<section id="contact">
     <h2>Contact Me</h2> 
 <p>
     If you have an application you are interested in developing, 
@@ -231,7 +234,7 @@
    <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500" type="text" required></textarea>
 <button type="submit" id="contact-button"><a href="">Get in touch</a></button>
 </form>
-<div class=""><img src="Images/Shape.png" alt=""></div>
+<div class="bottom"><img src="Images/Shape.png" alt=""></div>
 </section>
 <!-- the contact page ends here -->
 </body>
