Update html and css files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     </div>
     
-    <main>
+    <main class ="first-section">
             <h1>I'm Joseph Glad to meet you!</h1>  
         <p>
             I’m a software developer! I can help you build a product , 
@@ -210,8 +210,12 @@
 </ul>
 
     <ul class="lang-skills">
-        <li> <p>Frameworks</p> <img src="Images/right-arrow.png" alt=""></li>
-        <li class="skills"> <p>Skills</p> <img src="Images/right-arrow.png" alt=""></li>
+        <li class="framework"> 
+            Frameworks <img class="image" src="Images/right-arrow.png" alt="">
+        </li> 
+        <li class="skills">
+            Skills <img class="image" src="Images/right-arrow.png" alt="">
+        </li>
     </ul>
     <div><img class="shape" src="Images/Separator Bottom.png" alt=""></div>
      <div><img class="shape-1" src="Images/Separator Bottom.png" alt=""></div> 
