Update the submit button on the index page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </ul>
     </main>
     <section class="grid-container">
+        
     <section class="grid-item">
         <img class="snap" src="Images/Snapshoot Portfolio.png" alt="">
         <h2 class="tonic">Tonic</h2>
@@ -236,7 +237,7 @@
    <input name="Name" placeholder="Yeremias" type="text" maxlength="30" required>
    <input name="Email" placeholder="natajayanj14@gmail.com" type="email" required>
    <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500" type="text" required></textarea>
-<button type="submit" id="contact-button"><a href="">Get in touch</a></button>
+<button type="submit" id="contact-button">Get in touch</button>
 </form>
 <div class="bottom"><img src="Images/Shape.png" alt=""></div>
 </section>
