--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
     </main>
     <section class="grid-container">
-        
+
     <section class="grid-item">
         <img class="snap" src="Images/Snapshoot Portfolio.png" alt="">
         <h2 class="tonic">Tonic</h2>
@@ -181,7 +181,7 @@
      </section>
     <section class="about">
         <h2 class="multi">About Myself</h2> 
-    <p>
+    <p class="summary">
         I’m a software developer! I can help you build a product , 
         feature or website Look through some of my work and experience! 
         If you like what you see and have a project you need coded, 
