Design the layout and styling of the first page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
     <div class="header">
         <a class="logo" href="">My Logo</a>
     <nav>
-        <img class="nav" src="Images/menu-button.png" alt="">  
+        <img class="nav" src="Images/menu-button.png" alt=""> 
+        <ul class="nav-link">
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>    
     </nav>
     </div>
     
     <main class ="first-section">
-            <h1>I'm Joseph Glad to meet you!</h1>  
+        <!-- <h1> -->
+            <span id="content1">I'm Joseph</span>
+            <span id="content2">Glad to meet you!</span>
+        <!-- </h1>   -->
         <p>
             I’m a software developer! I can help you build a product , 
             feature or website Look through some of my work and experience! 
