Update the design of the card section in desktop view(>=768px)

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
         <div class="desktop-card">
             <section class="grid-item-desktop">
-                <div class="image">
+                <div class="main-img">
                     <img class="snap-desktop" src="Images/desktop/page-1" alt="">
                 </div>
                 <div class="sidebar">
@@ -234,8 +234,121 @@
                     <button class="button-desktop"><a href="">See Project</a></button>
                 </div>
             </section>
+            <section class="grid-item-desktop">
+                <div class="sidebar">
+                    <h2 class="tonic-desktop">Multi-Post Stories</h2>
+                    <div class="container-desktop">
+                        <div class="canopy-desktop">
+                            <p>FACEBOOK</p>
+                        </div>
+
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>Full Stack Dev</p>
+                        </div>
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>2015</p>
+                        </div>
+                    </div>
+                    <div class="content-desktop">
+                        <p>
+                            Experimental content creation feature that allows users to 
+                            add to an existing story over the course of a day without
+                            spamming their friends.
+                        </p>
+                    </div>
+
+                    <ul class="link-desktop">
+                        <li><a href="">Html</a></li>
+                        <li><a href="">Ruby on rails</a></li>
+                        <li><a href="">css</a></li>
+                        <li><a href="">javascript</a></li>
+                    </ul>
+
+                    <button class="button-desktop"><a href="">See Project</a></button>
+                </div>
+                <div class="main-img">
+                    <img class="snap-desktop" src="Images/desktop/page-2" alt="">
+                </div>
+            </section>
+            <section class="grid-item-desktop">
+                <div class="main-img">
+                    <img class="snap-desktop" src="Images/desktop/page-3" alt="">
+                </div>
+                <div class="sidebar">
+                    <h2 class="tonic-desktop">Facebook 360</h2>
+                    <div class="container-desktop">
+                        <div class="canopy-desktop">
+                            <p>FACEBOOK</p>
+                        </div>
+
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>Full Stack Dev</p>
+                        </div>
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>2015</p>
+                        </div>
+                    </div>
+                    <div class="content-desktop">
+                        <p>
+                            Exploring the future of media in facebook's first Virtual reality
+                            app: a place to discover and enjoy 369 photoss and videos on
+                            Gear VR.
+                        </p>
+                    </div>
+
+                    <ul class="link-desktop">
+                        <li><a href="">Html</a></li>
+                        <li><a href="">Ruby on rails</a></li>
+                        <li><a href="">css</a></li>
+                        <li><a href="">javascript</a></li>
+                    </ul>
+
+                    <button class="button-desktop"><a href="">See Project</a></button>
+                </div>
+            </section>
+            <section class="grid-item-desktop">
+                <div class="sidebar">
+                    <h2 class="tonic-desktop">Uber Navigation</h2>
+                    <div class="container-desktop">
+                        <div class="canopy-desktop">
+                            <p>Uber</p>
+                        </div>
+
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>Lead Developer</p>
+                        </div>
+                        <div class="details-desktop">
+                            <img src="Images/Counter.png" alt="">
+                            <p>2018</p>
+                        </div>
+                    </div>
+                    <div class="content-desktop">
+                        <p>
+                            A smart assistant to make driving mode safe. efficient, and fun
+                            bu unlocking your most expensive computer:your car.
+                        </p>
+                    </div>
+
+                    <ul class="link-desktop">
+                        <li><a href="">Html</a></li>
+                        <li><a href="">Ruby on rails</a></li>
+                        <li><a href="">css</a></li>
+                        <li><a href="">javascript</a></li>
+                    </ul>
+
+                    <button class="button-desktop"><a href="">See Project</a></button>
+                </div>
+                <div class="main-img">
+                    <img class="snap-desktop" src="Images/desktop/page-4" alt="">
+                </div>
+            </section>
         </div>
-        <div class="desktop-card">
+        <!-- <div class="desktop-card">
             <section class="grid-item-desktop">
                 <div class="image">
                     <img class="snap-desktop" src="Images/desktop/page-3" alt="">
@@ -271,7 +384,7 @@
                     <button class="button-desktop"><a href="">See Project</a></button>
                 </div>
             </section>
-        </div>
+        </div> -->
     </section>
 
     </section>
