--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+    <div class="landingPage">
+        <!-- <img class="head-bg" src="Images/desktop/header background shape-desktop.svg" alt=""> -->
     <div class="header">
         <div>
             <a class="logo" href="">My Logo</a>
@@ -58,6 +60,7 @@
             <li> <a href=""><img src="Images/Vector.svg" alt=""></a></li>
         </ul>
     </main>
+</div>
     <section class="grid-container">
         <div class="mobile-card">
             <section class="grid-item">
