--- a/index.html
+++ b/index.html
@@ -468,20 +468,26 @@
   
     <!-- This is the contact page -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>
-            If you have an application you are interested in developing,
-            a feature that you need built or a project that needs coding.
-            I’d love to help with it
-        </p>
-        <form action="https://formspree.io/f/xgebkzlz" method="post">
-            <input name="Name" placeholder="Yeremias" type="text" maxlength="30" required>
-            <input name="Email" placeholder="natajayanj14@gmail.com" type="email" required>
-            <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500"
-                type="text" required></textarea>
-            <button type="submit" id="contact-button">Get in touch</button>
-        </form>
-        <div class="bottom"><img src="Images/Shape.png" alt=""></div>
+        <div id="contact-wrapper">
+            <div id="form-wrapper">
+                <h2>Contact Me</h2>
+                <p>
+                    If you have an application you are interested in developing,
+                    a feature that you need built or a project that needs coding.
+                    I’d love to help with it
+                </p>
+                <form action="https://formspree.io/f/xgebkzlz" method="post">
+                    <input name="Name" placeholder="Yeremias" type="text" maxlength="30" required>
+                    <input name="Email" placeholder="natajayanj14@gmail.com" type="email" required>
+                    <textarea placeholder="Write your message here" name="Message" id="" cols="30" rows="10" maxlength="500"
+                        type="text" required></textarea>
+                    <button type="submit" id="contact-button">Get in touch</button>
+                </form>
+                <div class="bottom"><img src="Images/Shape.png" alt=""></div>
+            </div>
+        </div>
+        
+        
     </section>
     <!-- the contact page ends here -->
 </body>
