Clean the contact page as per the review request

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div id="contact-wrapper">
             <div id="form-wrapper">
                 <h2>Contact Me</h2>
-                <p>
+                <p class="wrapper">
                     If you have an application you are interested in developing,
                     a feature that you need built or a project that needs coding.
                     I’d love to help with it
