Add a modal pop up to the see project button in the cards

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/navModal.css">
+    <link rel="stylesheet" href="css/cardModal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -75,142 +76,7 @@
     </main>
 </div>
     <section class="grid-container">
-        <div class="mobile-card">
-            <section class="grid-item">
-                <img class="snap" src="Images/Snapshoot Portfolio.png" alt="">
-                <h2 class="tonic">Tonic</h2>
-                <div class="container">
-                    <div class="canopy">
-                        <p>CANOPY</p>
-                    </div>
-
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>Backend Dev</p>
-                    </div>
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>2015</p>
-                    </div>
-                </div>
-                <div class="content">
-                    <p>
-                        A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.
-                    </p>
-                </div>
-
-                <ul class="link">
-                    <li><a href="">Html</a></li>
-                    <li><a href="">css</a></li>
-                    <li><a href="">javascript</a></li>
-                </ul>
-
-                <button class="button"><a href="">See Project</a></button>
-
-            </section>
-            <section class="grid-item">
-                <img class="snap" src="Images/Snapshoot Portfolio (2).png" alt="">
-                <h2 class="multi">Multi-Post
-                    Stories</h2>
-                <div class="container">
-                    <div class="canopy">
-                        <p>CANOPY</p>
-                    </div>
-
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>Backend Dev</p>
-                    </div>
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>2015</p>
-                    </div>
-                </div>
-                <div class="content">
-                    <p>
-                        A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.
-                    </p>
-                </div>
-
-                <ul class="link">
-                    <li><a href="">Html</a></li>
-                    <li><a href="">css</a></li>
-                    <li><a href="">javascript</a></li>
-                </ul>
-
-                <button class="button"><a href="">See Project</a></button>
-
-            </section>
-            <section class="grid-item">
-                <img class="snap" src="Images/Snapshoot Portfolio (1).png" alt="">
-                <h2 class="tonic">Tonic</h2>
-                <div class="container">
-                    <div class="canopy">
-                        <p>CANOPY</p>
-                    </div>
-
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>Backend Dev</p>
-                    </div>
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>2015</p>
-                    </div>
-                </div>
-                <div class="content">
-                    <p>
-                        A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.
-                    </p>
-                </div>
-
-                <ul class="link">
-                    <li><a href="">Html</a></li>
-                    <li><a href="">css</a></li>
-                    <li><a href="">javascript</a></li>
-                </ul>
-
-                <button class="button"><a href="">See Project</a></button>
-
-            </section>
-            <section class="grid-item">
-                <img class="snap" src="Images/Snapshoot Portfolio (3).png" alt="">
-                <h2 class="multi">Multi-Post
-                    Stories</h2>
-                <div class="container">
-                    <div class="canopy">
-                        <p>CANOPY</p>
-                    </div>
-
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>Backend Dev</p>
-                    </div>
-                    <div class="details">
-                        <img src="Images/Counter.png" alt="">
-                        <p>2015</p>
-                    </div>
-                </div>
-                <div class="content">
-                    <p>
-                        A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.
-                    </p>
-                </div>
-
-                <ul class="link">
-                    <li><a href="">Html</a></li>
-                    <li><a href="">css</a></li>
-                    <li><a href="">javascript</a></li>
-                </ul>
-
-                <button class="button"><a href="">See Project</a></button>
-
-
-
+        <div id="main">
         </div>
         <div class="desktop-card">
             <section class="grid-item-desktop">
@@ -503,7 +369,8 @@
         
     </section>
     <!-- the contact page ends here -->
-    <script src="/navmodal.js"></script>
+    <script src="/Js/script.js"></script>
+    <script src="/Js/modal.js"></script>
 </body>
 
 </html>
