--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Profile</title>
 </head>
 
@@ -78,7 +79,7 @@
     <section class="grid-container">
         <div id="main">
         </div>
-        <div class="desktop-card">
+        <!-- <div class="desktop-card">
             <section class="grid-item-desktop">
                 <div class="main-img">
                     <img class="snap-desktop" src="Images/desktop/page-1" alt="">
@@ -184,7 +185,9 @@
                     <ul class="link-desktop">
                         <li><a href="">Html</a></li>
                         <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
+                        <<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+                        crossorigin="anonymous"></script>li><a href="">css</a></li>
                         <li><a href="">javascript</a></li>
                     </ul>
 
@@ -228,7 +231,7 @@
                     <img class="snap-desktop" src="Images/desktop/page-4" alt="">
                 </div>
             </section>
-        </div>
+        </div> -->
     </section>
 
     </section>
@@ -369,6 +372,7 @@
         
     </section>
     <!-- the contact page ends here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="/Js/script.js"></script>
     <script src="/Js/modal.js"></script>
 </body>
